k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: pakomp/helloapp:v1
          name: helloapp
          ports:
            - name: myapp-port
              containerPort: 80
          resources:
            requests:
              cpu: "0.1"
              memory: "10M"
            limits:
              cpu: "10"
              memory: "5G"
