k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello-service
spec:
  type: LoadBalancer
  ports:
    - name: "web"
      protocol: TCP
      port: 8080
      targetPort: myapp-port
  selector:
    app: myapp
